setting local project

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Bmarkt Studio | Graphic Design, Web Development, Digital Marketing & Architecture</title>
     <meta name="description" content="Studio graphic, development, marketing & architecture">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/res/css/styles.min.css">
+	<link rel="stylesheet" href="/res/css/styles.css">
 	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
 </head>
 <body>
