fixin hashtag routing

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header row">
         <div class="row-content row-content_medium row-elements_between row-content-center_vertical">
-            <a href="/">
+            <a href="/var/www/bmarkt-studio">
                 <img class="logo" src="res/img/logoFull.png" alt="logo"></img>
             </a>
             
