--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" data-ng-app="bmarkt">
 <head>
-    <base href="/">
+    <!-- <base href="/"> -->
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico">
     <title>Bmarkt Studio | Graphic Design, Web Development, Digital Marketing & Architecture</title>
@@ -14,7 +14,7 @@
 <body>
     <header class="header row">
         <div class="row-content row-content_medium row-elements_between row-content-center_vertical">
-            <a href="/var/www/bmarkt-studio">
+            <a href="/">
                 <img class="logo" src="res/img/logoFull.png" alt="logo"></img>
             </a>
             
