--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <footer class="footer row row-content_column  row-content-center_vertical">
         <span class="map-toggler_open"> <i class="fa fa-map" aria-hidden="true"></i> </span>
         <span class="map-toggler_close" style="display: none"> <i class="fa fa-map" aria-hidden="true"></i> </span>
-        <iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d1296.8042740418107!2d-86.35661010025788!3d13.097823473313829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d13.0980063!2d-86.356329!5e0!3m2!1sen!2s!4v1485989122647" allowfullscreen></iframe>
+        <!-- <iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d1296.8042740418107!2d-86.35661010025788!3d13.097823473313829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d13.0980063!2d-86.356329!5e0!3m2!1sen!2s!4v1485989122647" allowfullscreen></iframe> -->
         <div class="footer-container row-content">
             <!--<div class="map-container"></div>-->
             
