--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
             
             <nav class="navbar flex">
                 <a class="link" ui-sref="/" ui-sref-active="active">Home</a>
-                <a class="link" ui-sref="services" ui-sref-active="active">Services</a>
-                <a class="link" ui-sref="portfolio" ui-sref-active="active">Portfolio</a>
-                <a class="link" ui-sref="contact" ui-sref-active="active">Contact</a>
-                <a class="link" ui-sref="componente" ui-sref-active="active">Component</a>
+                <a class="link" ui-sref="/services" ui-sref-active="active">Services</a>
+                <a class="link" ui-sref="/portfolio" ui-sref-active="active">Portfolio</a>
+                <a class="link" ui-sref="/contact" ui-sref-active="active">Contact</a>
+                <a class="link" ui-sref="/componente" ui-sref-active="active">Component</a>
                 <!--<i class="fa fa-globe nav-link" aria-hidden="true"></i> -->
             </nav>
         </div>
