cerrando el menu al navegar

--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,10 @@
             $('.hamburger').toggleClass("togle");
             $('.navbar').toggleClass("navbar-mobile");
         });
+        $('.link').click(function() {
+            $('.hamburger').toggleClass("togle");
+            $('.navbar').toggleClass("navbar-mobile");            
+        })
 
 	</script>
 </body>
