--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
     <title>Bmarkt Studio | Graphic Design, Web Development, Digital Marketing & Architecture</title>
     <meta name="description" content="Studio graphic, development, marketing & architecture">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/res/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="/res/css/styles.css">
-	<!--<script src="https://use.fontawesome.com/28b518dfdc.js"></script>-->
+	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
 </head>
 <body>
     <header class="header">
         <div class="header-container">
             <a href="/">
                 <img class="logo" src="res/img/logoFull.png" alt="logo"></img>
-                <img class="logo-mobile" src="res/img/logo.png" alt="logo"></img>
+                <img class="logo-mobile" src="res/img/escudo.png" alt="logo"></img>
             </a>
             <div class="menu-wrapper">
               <div class="hamburger"></div>
@@ -26,8 +26,8 @@
                 <a class="link" ui-sref="services" ui-sref-active="active">Services</a>
                 <a class="link" ui-sref="portfolio" ui-sref-active="active">Portfolio</a>
                 <a class="link" ui-sref="contact" ui-sref-active="active">Contact</a>
-                <a class="link" ui-sref="componente" ui-sref-active="active">Component</a>
-                <!--<i class="fa fa-globe nav-link" aria-hidden="true"></i> -->
+                <!--<a class="link" ui-sref="componente" ui-sref-active="active">Component</a> -->
+                <i class="fa fa-globe nav-link" aria-hidden="true"></i>
             </nav>
         </div>
     </header>
