comportamiento header, modal de servicios

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="favicon.ico">
     <title>Bmarkt Studio | Graphic Design, Web Development, Digital Marketing & Architecture</title>
     <meta name="description" content="Studio graphic, development, marketing & architecture">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalabe=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="/res/css/styles.css">
 	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
