--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico">
     <title>Bmarkt Studio | Graphic Design, Web Development, Digital Marketing & Architecture</title>
+    <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA" />
     <meta name="description" content="Studio graphic, development, marketing & architecture">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="keywords" content="bmarkt.studio, bmarktstudio, bmarkt studio, web design, diseño gráfico, web development, desarrollo web, digital marketing, marketing, architecture, arquitectura">
     <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="/res/css/styles.css">
 	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
