--- a/public/index.html
+++ b/public/index.html
@@ -10,19 +10,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="keywords" content="bmarkt.studio, bmarktstudio, bmarkt studio, web design, diseño gráfico, web development, desarrollo web, digital marketing, marketing, architecture, arquitectura">
     <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
-	<link rel="stylesheet" href="/res/css/styles.css">
+	<link rel="stylesheet" href="/res/css/styles.min.css">
 	<link rel="stylesheet" href="/res/css/jquery.bxslider.min.css">
 	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
 </head>
 <body>
     <bmarkt-studio></bmarkt-studio>
     
-	
-    <!--<script src="res/js/jquery.min.js"></script>
-    <script src="res/js/angular.min.js"></script>-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <!-- <script src="//unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>-->
     <script src="res/js/angular-ui-router.js"></script>
 	<!--<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>-->
 	<!--<script src="res/js/isotope.pkgd.min.js"></script>-->
