--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
 	<script src="res/js/jquery.bxslider.min.js"></script>
 	<script src="res/js/scripts.min.js"></script>
+	<script src="res/js/lazyload.js"></script>
 	<script>
 
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
