--- a/public/admin.html
+++ b/public/admin.html
@@ -3,8 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ADMIN</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<h1>AMINISTRACION</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-12 col-md-12 col-lg-12">
+				<form>
+					<div class="form-group">
+						<label for="user" class="control-label">Usuario: </label>
+						<input name="user" type="text" class="form-control" data-ng-model="adminCtrl.variable">
+					</div>
+					<div class="form-group">
+						<input type="button" class="btn btn-default btn-info" value="SEND" data-ng-click="adminCtrl.evento()"></input>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
