--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- <base href="/"> -->
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico">
-    <title>Bmarkt Studio | Graphic Design, Web Development, Digital Marketing & Architecture</title>
+    <title>Bmarkt Studio | Diseño, Desarrollo, Marketing & Arquitectura</title>
     <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA" />
     <meta name="description" content="Studio graphic, development, marketing & architecture">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
