--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="keywords" content="bmarkt.studio, bmarktstudio, bmarkt studio, web design, diseño gráfico, web development, desarrollo web, digital marketing, marketing, architecture, arquitectura">
     <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
-	<link rel="stylesheet" href="/res/css/styles.css">
+	<link rel="stylesheet" href="/res/css/styles.min.css">
 	<link rel="stylesheet" href="/res/css/jquery.bxslider.min.css">
 	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
 </head>
