--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,17 @@
     
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <script src="res/js/angular-ui-router.js"></script>
-	<!--<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>-->
-	<!--<script src="res/js/isotope.pkgd.min.js"></script>-->
-	<!--<script src="res/js/isotope.js"></script>	-->
-
+    <script src="res/js/app.bundle.js"></script>
+    <!--<script src="res/js/angular-ui-router.js"></script>
 	<script src="res/js/jquery.bxslider.min.js"></script>
 	<script src="res/js/scripts.min.js"></script>
 	<script src="res/js/lazyload.js"></script>
-	<script src="res/js/isotope.pkgd.min.js"></script>
+	<script src="res/js/isotope.pkgd.min.js"></script>-->
+	
+	<!--<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>-->
+	<!--<script src="res/js/isotope.pkgd.min.js"></script>-->
+	<!--<script src="res/js/isotope.js"></script>	-->
+	
 	<script>
 
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
