todo en uno webpack y librerias y frameworks

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,9 @@
 <body>
     <bmarkt-studio></bmarkt-studio>
     
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="res/js/app.bundle.js"></script>
-    <!--<script src="res/js/angular-ui-router.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script><script src="res/js/angular-ui-router.js"></script>
 	<script src="res/js/jquery.bxslider.min.js"></script>
 	<script src="res/js/scripts.min.js"></script>
 	<script src="res/js/lazyload.js"></script>
