allahu akbar 15 de mayo

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="favicon.ico">
     <title>Bmarkt Studio | Diseño, Desarrollo, Marketing & Arquitectura</title>
     <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA" />
+	<meta name="author" content="Bmarkt Studio">
+	<meta name="owner" content="Bmarkt Studio">
+
     <meta name="description" content="Studio graphic, development, marketing & architecture">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="keywords" content="bmarkt.studio, bmarktstudio, bmarkt studio, web design, diseño gráfico, web development, desarrollo web, digital marketing, marketing, architecture, arquitectura">
@@ -19,6 +22,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+	<!-- <script src="res/js/script.js"></script> -->
 	<script src="res/js/angular-ui-router.js"></script>
 	<script src="res/js/jquery.bxslider.min.js"></script>
 	<script src="res/js/scripts.min.js"></script>
