--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es" data-ng-app="bmarkt">
 <head>
-    <!-- <base href="/"> -->
+    <base href="/">
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico">
     <title>Bmarkt Studio | Diseño, Desarrollo, Marketing & Arquitectura</title>
