seo title, descriptio, keywods

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="es" data-ng-app="bmarkt">
-<head>
+<head data-ng-controller="headCtrl">
     <base href="/">
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico">
-    <title>Bmarkt Studio | Diseño, Desarrollo, Marketing & Arquitectura</title>
+    
+    <title data-ng-bind="seoTitle"></title>
     <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA" />
 	<meta name="author" content="Bmarkt Studio">
 	<meta name="owner" content="Bmarkt Studio">
