--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,14 @@
     
     <title data-ng-bind="seoTitle"></title>
     <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA" />
+    <meta name="wot-verification" content="248ff4927c7418072689"/>
+
 	<meta name="author" content="Bmarkt Studio">
 	<meta name="owner" content="Bmarkt Studio">
 
     <meta name="description" content="Studio graphic, development, marketing & architecture">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="keywords" content="bmarkt.studio, bmarktstudio, bmarkt studio, web design, diseño gráfico, web development, desarrollo web, digital marketing, marketing, architecture, arquitectura">
+	<meta name="keywords" content="{{homeDescription}}">
     <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="/res/css/styles.min.css">
 	<link rel="stylesheet" href="/res/css/jquery.bxslider.min.css">
