seo optimization time performance

--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,22 @@
 	<meta name="author" content="Bmarkt Studio">
 	<meta name="owner" content="Bmarkt Studio">
 
-    <meta name="description" content="Studio graphic, development, marketing & architecture">
+    <meta name="description" content="{{homeDescription}}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="keywords" content="{{homeDescription}}">
-    <!-- <link rel="stylesheet" href="/res/css/font-awesome.min.css"> -->
-	<link rel="stylesheet" href="/res/css/styles.min.css">
+	<meta name="keywords" content=" Studio graphic,web development,digital marketing, architecture">
+    <link rel="stylesheet" href="/res/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/res/css/jquery.bxslider.min.css">
-	<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
+	<link rel="stylesheet" href="/res/css/styles.min.css">
+	<!-- <script src="https://use.fontawesome.com/28b518dfdc.js"></script> -->
 </head>
 <body>
     <bmarkt-studio></bmarkt-studio>
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-	<!-- <script src="res/js/script.js"></script> -->
+	<script src="res/js/script.js"></script> -->
+	<script src="res/js/jquery.min.js"></script>
+	<script src="res/js/angular.min.js"></script>
 	<script src="res/js/angular-ui-router.js"></script>
 	<script src="res/js/jquery.bxslider.min.js"></script>
 	<script src="res/js/scripts.min.js"></script>
