css min assets plugins and libraries

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,12 @@
     <meta name="description" content="{{homeDescription}}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="keywords" content=" Studio graphic,web development,digital marketing, architecture">
-    <link rel="stylesheet" href="/res/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/res/css/jquery.bxslider.min.css">
 	<link rel="stylesheet" href="/res/css/styles.min.css">
-	<!-- <script src="https://use.fontawesome.com/28b518dfdc.js"></script> -->
+	<!-- 
+	    <link rel="stylesheet" href="/res/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/res/css/jquery.bxslider.min.css">
+		<script src="https://use.fontawesome.com/28b518dfdc.js"></script>
+	-->
 </head>
 <body>
     <bmarkt-studio></bmarkt-studio>
