--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="favicon.ico">
     
     <title data-ng-bind="seoTitle"></title>
-    <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA" />
-    <meta name="wot-verification" content="248ff4927c7418072689"/>
+    <meta name="google-site-verification" content="PtqE7YOguVrwaot4OqDGQiRRS-MEKNMdhoUEM3cYYwA">
+    <meta name="wot-verification" content="248ff4927c7418072689">
 
 	<meta name="author" content="Bmarkt Studio">
 	<meta name="owner" content="Bmarkt Studio">
